--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(swaap_add.source)
 export(swaap_add.substances)
 export(swaap_add.time_point)
 export(swaap_add.year_and_semester)
+export(swaap_analysis.prep_project)
+export(swaap_analysis.source_scripts)
 export(swaap_data.attr)
 export(swaap_data.download)
 export(swaap_data.files)
