Fix: Internal marginal rates using 2023

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(swaap_data.download)
 export(swaap_data.files)
 export(swaap_data.merge)
 export(swaap_data.missing)
+export(swaap_data.replace)
+export(swaap_data.replace_defaults)
+export(swaap_data.static)
 export(swaap_data.subset)
 export(swaap_link)
 export(swaap_link.helper.input)
