--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: swaap
 Title: School-Wide Assessment Analysis Preparation
-Version: 0.9.4
+Version: 0.9.6
 Authors@R: 
   c(
     person(
@@ -33,5 +33,6 @@ RoxygenNote: 7.3.1
 Depends: 
     R (>= 2.10)
 Imports:
-    dplyr
+    dplyr,
+    fastLink
 LazyData: true
