--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(swaap_add.substances)
 export(swaap_add.time_point)
 export(swaap_add.year_and_semester)
 export(swaap_analysis.prep_project)
+export(swaap_analysis.schools)
 export(swaap_analysis.source_scripts)
 export(swaap_data.at)
 export(swaap_data.attr)
